# Supply_Chain_Detector

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  analysis_service.py  cache.py  celery_app.py  config.py  main.py  requirements.txt  schemas.py  tasks.py
api/middleware/: __init__.py  rate_limiter.py
api/models/: __init__.py  db_models.py  schemas.py
api/routes/: __init__.py  analyze.py  results.py
data/datasets/: build_benign_sample.py  build_legit_dataset.py  download_backstabbers.py  generate_all_data.py  label_and_split.py  normalize_records.py
data/semgrep_rules/: credential_harvesting.yaml  network_on_import.yaml  reverse_shell.yaml  setup_py_exec.yaml
data/top_packages/: npm_top_1000.json  pypi_top_1000.json
detector/: aggregator.py  classifier.py  orchestrator.py
detector/layer1_metadata/: author_analyzer.py  metadata_analyzer.py  typosquat_detector.py  version_analyzer.py
detector/layer2_embeddings/: cluster_manager.py  code_embedder.py  embedding_analyzer.py
detector/layer3_static/: ast_analyzer.py  obfuscation_detector.py  semgrep_runner.py  static_analyzer.py
detector/layer4_llm/: deobfuscator.py  llm_auditor.py  prompt_templates.py  response_parser.py
detector/layer5_graph/: __init__.py  blast_radius.py  graph_analyzer.py  graph_builder.py
docs/: api_reference.md  architecture.md  checkpoints.md  dataset.md  deployment.md  dev-setup.md  environment_variables.md  llm_configuration.md  model_training.md  roadmap.md  technical_design.md  troubleshooting.md  worker_flow.md
docs/phases/: README.md
docs/phases/phase-1/: index.md  phase-1-step-1-pypi-fetcher.md  phase-1-step-2-npm-fetcher.md  phase-1-step-3-source-extractor.md  phase-1-step-4-backstabbers-bootstrap.md  phase-1-step-5-benign-sample-builder.md  phase-1-step-7-tests.md  (+2 more)
fetcher/: npm_fetcher.py  pypi_fetcher.py  source_extractor.py
github_action/: Dockerfile  README.md  action.yml  entrypoint.sh  scan_requirements.py
ml/: build_faiss_index.py  train_classifier.py
notebooks/: 01_eda_and_dataset.ipynb  02_feature_engineering.ipynb  03_embedding_clustering.ipynb  04_model_training.ipynb  05_evaluation_ablation.ipynb  06_layer5_graph_visualization.ipynb  README.md  precompute_cache.py
storage/: __init__.py  database.py  faiss_store.py  models.py  repository.py
storage/migrations/: env.py
tests/: conftest.py  final_system_validation.py  test_aggregator.py  test_api_endpoints.py  test_data_layer.py  test_e2e_pipeline.py  test_integration.py  test_layer2_embeddings.py  test_layer5_graph.py  test_metadata_analyzer.py  test_npm_fetcher.py  test_orchestrator.py  test_pypi_fetcher.py  test_semgrep_rules.py  test_smoke.py  test_source_extractor.py  test_typosquat.py
ui/: streamlit_app.py
ui/components/: __init__.py  graph_view.py  risk_report.py  threat_feed.py
workers/: worker.py
(+38 files in other folders)
