[tool.poetry]
name = "supply-chain-detector"
version = "0.1.0"
description = "AI-powered software supply chain attack detector"
authors = ["Mark Christian Anub"]
readme = "README.md"
packages = [{ include = "fetcher" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.11.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
